"""Абстрактные интерфейсы системы ContextSearch."""
from __future__ import annotations

from abc import ABC, abstractmethod
from typing import Iterable, Sequence

from domain.entities import Chunk, Document, EmbeddingSpec, Query, RetrievalResult


class TextExtractor(ABC):
    """Извлекает текст из источников пользователя (файлы, URL и т.д.)."""

    @abstractmethod
    def extract(self, source: bytes | str) -> str:
        """Вернуть текстовое представление источника."""


class ChunkSplitter(ABC):
    """Делит документы на чанки для поиска."""

    @abstractmethod
    def split(self, document: Document) -> list[Chunk]:
        """Вернуть чанки для заданного документа."""


class Embedder(ABC):
    """Преобразует текст (документы или запросы) в векторные эмбеддинги."""

    @property
    @abstractmethod
    def model_id(self) -> str:
        """Вернуть стабильный идентификатор модели эмбеддингов."""

    @property
    @abstractmethod
    def dimension(self) -> int:
        """Вернуть размерность эмбеддингов модели."""

    @abstractmethod
    def embed_texts(self, texts: Sequence[str]) -> list[list[float]]:
        """Преобразовать список текстов в плотные вектора."""

    @abstractmethod
    def embed_query(self, query: Query) -> list[float]:
        """Преобразовать запрос пользователя в вектор для поиска."""


class EmbeddingStore(ABC):
    """Хранит эмбеддинги и выполняет поиск по сходству."""

    @abstractmethod
    def add(
        self,
        spec: EmbeddingSpec,
        object_type: str,
        object_ids: Sequence[str],
        embeddings: Sequence[Sequence[float]],
    ) -> None:
        """Сохранить эмбеддинги для объектов указанного типа."""

    @abstractmethod
    def search(
        self,
        spec: EmbeddingSpec,
        query_embedding: Sequence[float],
        top_k: int = 5,
    ) -> list[tuple[int, float]]:
        """Вернуть ann_id и score для эмбеддинга запроса."""


class DocumentRepository(ABC):
    """Хранит метаданные документов."""

    @abstractmethod
    def add(self, document: Document) -> None:
        """Сохранить документ."""

    @abstractmethod
    def list(self) -> list[Document]:
        """Вернуть список всех документов."""

    @abstractmethod
    def get(self, document_id: str) -> Document | None:
        """Получить документ по идентификатору."""


class ChunkRepository(ABC):
    """Хранит метаданные и содержимое чанков."""

    @abstractmethod
    def add(self, chunk: Chunk) -> str:
        """Сохранить чанк и вернуть его идентификатор."""

    @abstractmethod
    def list(self) -> list[Chunk]:
        """Вернуть список всех чанков."""

    @abstractmethod
    def get(self, chunk_id: str) -> Chunk | None:
        """Получить чанк по идентификатору."""


class EmbeddingSpecRepository(ABC):
    """Хранит спецификации эмбеддингов."""

    @abstractmethod
    def upsert(self, spec: EmbeddingSpec) -> None:
        """Создать или обновить спецификацию."""

    @abstractmethod
    def list(self) -> list[EmbeddingSpec]:
        """Вернуть список спецификаций."""

    @abstractmethod
    def get(self, spec_id: str) -> EmbeddingSpec | None:
        """Получить спецификацию по id."""


class EmbeddingRecordRepository(ABC):
    """Хранит маппинг ann_id к объектам."""

    @abstractmethod
    def add_records(
        self,
        spec_id: str,
        object_type: str,
        object_ids: Sequence[str],
        ann_ids: Sequence[int],
    ) -> None:
        """Добавить записи маппинга."""

    @abstractmethod
    def find_object_ids(self, spec_id: str, ann_ids: Sequence[int]) -> list[str]:
        """Получить object_id по ann_id."""

    @abstractmethod
    def list_object_ids(self, spec_id: str, object_type: str) -> list[str]:
        """Вернуть все object_id для спецификации и типа объекта."""


class QueryRewriter(ABC):
    """Позволяет экспериментировать со стратегиями переписывания запросов."""

    @abstractmethod
    def rewrite(self, query: Query) -> list[Query]:
        """Вернуть варианты переписанного запроса."""


class Reranker(ABC):
    """Применяет стратегию переранжирования после первичного поиска."""

    @abstractmethod
    def rerank(self, query: Query, results: Iterable[RetrievalResult]) -> list[RetrievalResult]:
        """Вернуть список результатов после переранжирования."""


__all__ = [
    "TextExtractor",
    "ChunkSplitter",
    "Embedder",
    "EmbeddingStore",
    "DocumentRepository",
    "ChunkRepository",
    "EmbeddingSpecRepository",
    "EmbeddingRecordRepository",
    "QueryRewriter",
    "Reranker",
]
